Fix for wrapping header

--- a/views/stylesheets/core-style.less
+++ b/views/stylesheets/core-style.less
@@ -61,6 +61,8 @@ a {
 		font-family: 'Lobster';
 		text-shadow: 3px 3px 2px rgba(10, 10, 10, 0.6);
 		border-bottom: 2px dotted #DDD;
+		clear: both;
+		white-space: nowrap;
 	}
 
 	h1 em {
